LayoutTests:

Reviewed by Darin.

        Update tests for http://bugs.webkit.org/show_bug.cgi?id=13830
        Auto-generate JS DOM bindings for HTMLDocument and most of 
        the rest of HTMLElement

        - Corrects prototype chain for JSHTMLDocument and adds test
          for HTMLFormElement.

        * fast/dom/prototype-chain-expected.txt:
        * fast/dom/prototype-chain.html:

WebCore:

        Reviewed by Darin.

        - rdar://problem/5183523
        - We now check the document's URL to see if it can load a resource in the case of a URL click, instead of checking the referrer, which is blank for local files.

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::load):
        (WebCore::FrameLoader::open):
        * platform/PlatformString.h:
        (WebCore::debugPrintString):



git-svn-id: svn://svn.chromium.org/blink/trunk@21682 bbb929c8-8fbe-4397-9dbb-9b2b20218538